# fyp

./: .gitignore  .gitmodules  MARIMO.md  README.md  pyproject.toml  zotaro_zenodo_todoList.md
archive/book_practice/: examples_from_book.py  main.py  pyproject.toml  td_mc_comparison_altair.html
archive/book_practice/bakup/: examples_from_book1.py
atari_bench/: CLAUDE.md  NOTE_n_envs_mismatch.md  continue.sh  env_config.py  eval.sh  evaluate.py  generate_figures.py  pyproject.toml  run.sh  train.py
atari_bench/notebook/: report.py
atari_bench/results/dqn/breakout/: config.json
atari_bench/results/dqn/pong/: config.json
atari_bench/results/metrics/: pairwise_poi.json
atari_bench/results/metrics/dqn/: evaluation_results.json  raw_score_matrix.npy  score_matrix.npy
atari_bench/results/metrics/dqn/learning_curves/: breakout.npz  pong.npz
atari_bench/results/metrics/dqn/sample_efficiency/: breakout.npz  pong.npz
atari_bench/results/metrics/ppo/: evaluation_results.json  raw_score_matrix.npy  score_matrix.npy
atari_bench/results/metrics/ppo/learning_curves/: breakout.npz  pong.npz
atari_bench/results/metrics/ppo/sample_efficiency/: breakout.npz  pong.npz
atari_bench/results/ppo/breakout/: config.json
atari_bench/results/ppo/pong/: config.json
atari_bench/tests/: conftest.py  test_pipeline.py
drafts/: airplane_benchmark_notes.md
rl_eval_bench/: .gitignore  CLAUDE.md  clear.sh  env_config.py  evaluate.py  generate_figures.py  pyproject.toml  run.sh  train.py
rl_eval_bench/notebook/: report.py
rl_eval_bench/notebook/layouts/: report.grid.json
rl_eval_bench/tests/: test_pipeline.py
