[project]
name = "fyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "box2d>=2.3.10",
    "duckdb>=1.4.3",
    "gymnasium[atari,classic-control,other]>=1.2.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "marimo>=0.18.4",
    "ruff>=0.14.9",
    "scipy>=1.15.3",
    "sqlglot>=28.3.0",
    "stable-baselines3[extra]>=2.7.0",
]
