[project]
name = "atari-bench"
version = "0.1.0"
description = "Atari RL benchmark — DQN vs PPO on pixel-based environments (Experiment 2)"
requires-python = "==3.10.*"
dependencies = [
  "gymnasium[atari]>=1.2.2",
  "ale-py>=0.10.1",
  "stable-baselines3[extra]>=2.7.0",
  "sb3-contrib>=2.7.0",
  "rliable>=1.0.8",
  "scipy>=1.15.3",
  "matplotlib>=3.5.0",
  "numpy>=1.26",
  "seaborn>=0.11.2",
  "pandas>=1.0",
  "ruff>=0.15.0",
  "tabulate>=0.9.0",
  "marimo>=0.18.4",
  "altair>=5.0",
  "pyarrow>=23.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["atari_bench*"]
