[project]
name = "rl-eval-bench"
version = "0.1.0"
description = "RL evaluation benchmark — rliable metrics on classic control"
requires-python = "==3.10.*"
dependencies = [
  "gymnasium[classic-control,box2d]>=1.2.2",
  "stable-baselines3[extra]>=2.7.0",
  "rliable>=1.0.8",
  "marimo>=0.18.4",
  "scipy>=1.15.3",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.2",
  "pandas>=1.0",
  "ruff>=0.15.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["eval_bench*"]
