[project]
name = "book-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.71.0",
    "duckdb>=1.4.1",
    "gymnasium>=1.2.1",
    "marimo>=0.17.6",
    "matplotlib>=3.10.7",
    "mcp>=1",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "polars[pyarrow]>=1.34.0",
    "pydantic>=2",
    "pytest>=8.4.2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
    "sqlglot>=27.26.0",
    "stable-baselines3[extra]>=2.7.0",
    "tqdm>=4.67.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
